--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,12 @@
 #
 #    pip-compile
 #
--e git+https://github.com/rtfd/recommonmark.git@450909bdcf4c5eafde7c89696006530ba7cc78de#egg=recommonmark
-    # via
-    #   -r requirements.in
-    #   sphinxcontrib-jsonschema
-    #   sphinxcontrib-opendataservices
--e git+https://github.com/OpenDataServices/sphinxcontrib-jsonschema.git@8a3982bf7701420e50d69f2341213ced2b18ca54#egg=sphinxcontrib-jsonschema
-    # via -r requirements.in
--e git+https://github.com/OpenDataServices/sphinxcontrib-opendataservices.git@fab0ff0167d32ec243d42f272e0e50766299c078#egg=sphinxcontrib-opendataservices
-    # via -r requirements.in
 -e git+https://github.com/openownership/data-standard-sphinx-theme.git@master#egg=standard_theme
     # via -r requirements.in
 alabaster==0.7.12
     # via sphinx
+attrs==21.2.0
+    # via markdown-it-py
 babel==2.9.0
     # via
     #   sphinx
@@ -27,17 +20,13 @@ chardet==4.0.0
     # via requests
 click==7.1.2
     # via sphinx-intl
-commonmark==0.7.5
-    # via
-    #   -r requirements.in
-    #   recommonmark
 docutils==0.16
     # via
-    #   recommonmark
+    #   myst-parser
     #   sphinx
     #   sphinx-rtd-theme
-future==0.18.2
-    # via commonmark
+    #   sphinxcontrib-opendataservices
+    #   sphinxcontrib-opendataservices-jsonschema
 gitdb==4.0.7
     # via gitpython
 gitpython==3.1.15
@@ -47,15 +36,27 @@ idna==2.10
 imagesize==1.2.0
     # via sphinx
 jinja2==2.11.3
-    # via sphinx
+    # via
+    #   myst-parser
+    #   sphinx
 jsonpointer==2.1
     # via
-    #   sphinxcontrib-jsonschema
     #   sphinxcontrib-opendataservices
+    #   sphinxcontrib-opendataservices-jsonschema
 jsonref==0.2
-    # via sphinxcontrib-jsonschema
+    # via sphinxcontrib-opendataservices-jsonschema
+markdown-it-py==1.1.0
+    # via
+    #   mdit-py-plugins
+    #   myst-parser
 markupsafe==1.1.1
     # via jinja2
+mdit-py-plugins==0.2.8
+    # via myst-parser
+myst-parser==0.15.2
+    # via
+    #   sphinxcontrib-opendataservices
+    #   sphinxcontrib-opendataservices-jsonschema
 ocds-babel==0.3.2
     # via -r requirements.in
 packaging==20.9
@@ -70,15 +71,15 @@ python-slugify==4.0.1
     # via transifex-client
 pytz==2021.1
     # via babel
+pyyaml==6.0
+    # via myst-parser
 requests==2.25.1
     # via
     #   -r requirements.in
     #   sphinx
     #   transifex-client
 six==1.15.0
-    # via
-    #   sphinx
-    #   transifex-client
+    # via transifex-client
 smmap==4.0.0
     # via gitdb
 snowballstemmer==2.1.0
@@ -89,25 +90,40 @@ sphinx-intl==2.0.1
     #   standard-theme
 sphinx-rtd-theme==0.5.2
     # via -r requirements.in
-sphinx==1.7.5
+sphinx==4.2.0
     # via
     #   -r requirements.in
-    #   recommonmark
+    #   myst-parser
     #   sphinx-intl
     #   sphinx-rtd-theme
-    #   sphinxcontrib-jsonschema
     #   sphinxcontrib-opendataservices
     #   standard-theme
-sphinxcontrib-serializinghtml==1.1.4
-    # via sphinxcontrib-websupport
-sphinxcontrib-websupport==1.2.4
+sphinxcontrib-applehelp==1.0.2
+    # via sphinx
+sphinxcontrib-devhelp==1.0.2
+    # via sphinx
+sphinxcontrib-htmlhelp==2.0.0
+    # via sphinx
+sphinxcontrib-jsmath==1.0.1
+    # via sphinx
+sphinxcontrib-opendataservices-jsonschema==0.4.0
+    # via
+    #   -r requirements.in
+    #   sphinxcontrib-opendataservices
+sphinxcontrib-opendataservices==0.2.0
+    # via -r requirements.in
+sphinxcontrib-qthelp==1.0.3
+    # via sphinx
+sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 text-unidecode==1.3
     # via python-slugify
 transifex-client==0.14.2
     # via -r requirements.in
 typing-extensions==3.7.4.3
-    # via gitpython
+    # via
+    #   gitpython
+    #   markdown-it-py
 urllib3==1.26.4
     # via
     #   -r requirements.in
